# ES_Smart_Farm

./: .gitignore  README.md  sdkconfig
gateway/: sdkconfig  sdkconfig.ci
gateway/main/: Kconfig.projbuild  local_server_cert.pem  local_server_key.pem  main.c
gateway/main/https/: https_request.c  https_request.h
gateway/main/wifi/: wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  https_request_example_main.c  main.c
main/https/: https_request.c  https_request.h
main/wifi/: wifi.c
sensor_node/: crc.cpp  crc.h  sensor_data.cpp  sensor_data.h  sensor_node.ino
